--- a/team.html
+++ b/team.html
@@ -257,7 +257,7 @@
   </div>
 </section>
 
-<!-- FOOTER -->
+<!-- FOOTER
 <footer>
   <p>Network Psychometrics</p>
   <div class="footer-links">
@@ -268,6 +268,7 @@
     <a href="#">Privacy</a>
   </div>
 </footer>
+-->
 
 <script>
 // ─── MOBILE NAV TOGGLE ───
@@ -395,7 +396,7 @@ themeToggle.addEventListener('click', () => {
       const hi = a.central || b.central;
       ctx.beginPath(); ctx.moveTo(a.x, a.y); ctx.lineTo(b.x, b.y);
       ctx.strokeStyle = hi ? `rgba(13,148,136,${alpha * 2})`
-        : lm ? `rgba(26,31,46,${alpha * 1.5})` : `rgba(244,240,232,${alpha * 1.5})`;
+        : lm ? `rgba(26,31,46,${alpha * 1.5})` : `rgba(244,240,232,${alpha * 2.5})`;
       ctx.lineWidth = hi ? 1 : 0.5;
       ctx.stroke();
     }
