--- a/team.html
+++ b/team.html
@@ -49,8 +49,8 @@
     }
 
     .faculty-monogram {
-      width:           100px;
-      height:          100px;
+      width:           200px;
+      height:          200px;
       background:      rgba(45, 212, 191, 0.06);
       border:          1px solid var(--border);
       display:         flex;
@@ -247,7 +247,10 @@
           </div>
         </div>
         <div class="student-card">
-          <div class="student-name">Leuny Ortiz</div>
+          <div class="faculty-monogram">
+            <img src="team/leuny-ortiz-gonzalez.jpeg" alt="Leuny Ortiz-González" style="object-position: center 25%;">
+          </div>
+          <div class="student-name">Leuny Ortiz-González</div>
 		  <div class="student-label">PhD Student</div>
         </div>
       </div>
