--- a/team.html
+++ b/team.html
@@ -204,7 +204,7 @@
 		  <div class="student-label">PhD Student</div>
           <div class="member-links" style="margin-top:0.9rem;">
             <a class="member-link" href="https://github.com/choi-jeongwon" target="_blank" rel="noopener">GitHub</a>
-            <a class="member-link" href="https://scholar.google.com/citations?user=X7w2AJUAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
+            <a class="member-link" href="https://scholar.google.com/citations?user=khxoz0wAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
           </div>
         </div>
       </div>
