some fine-tunnig

--- a/software.html
+++ b/software.html
@@ -263,6 +263,9 @@
           with a focus on applied psychological and neuroscientific research.
         </p>
         <div class="pkg-links">
+          <a href="https://doi.org/10.32614/CRAN.package.NetworkToolbox" class="pkg-link cran" target="_blank" rel="noopener">
+            <span class="pkg-link-icon">⌥</span> CRAN
+          </a>
           <a href="https://github.com/AlexChristensen" class="pkg-link github" target="_blank" rel="noopener">
             <span class="pkg-link-icon">⌥</span> GitHub
           </a>
